--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         font-size: 0.9em;
         background: Lavender;
         border-left-width: .5em;
-        border-left-style: solid;
+        border-left-style: solid;;ljnklj,:
         border-left-color: Orchid;
       }
 
